--- a/src/main/resources/templates/greeting.mustache
+++ b/src/main/resources/templates/greeting.mustache
@@ -7,6 +7,6 @@
 <body>
 <div>Welcome to Proglot Monet Restaurant site! You should to log in to view more information</div>
 <a href="/login">Log in</a>
-<a href="/registration">Create a new account</a>
+<!--<a href="/registration">Create a new account</a>-->
 </body>
 </html>
