--- a/src/main/resources/templates/menu.mustache
+++ b/src/main/resources/templates/menu.mustache
@@ -36,6 +36,10 @@
                     {{#isUserAutorize}}
                         <li><a href="/makeOrder">Make order</a></li>
                         <li><a href="/showOrders">Orders</a></li>
+                        {{#isAdmin}}
+                            <li><a href="/editMenu">Edit menu</a></li>
+                            <li><a href="/editStaff">Edit staff</a></li>
+                        {{/isAdmin}}
                         <li><a href="/logout">Sign Out</a></li>
                     {{/isUserAutorize}}
                 </ul>
