--- a/src/main/resources/templates/showOrders.mustache
+++ b/src/main/resources/templates/showOrders.mustache
@@ -10,8 +10,7 @@
         .dish{margin: 10px}
         .container .demo{text-align:center;}
         .container .demo div{padding:15px 0;}
-        .container .demo div:nth-child(odd){color:#FFFFFF; background:#CDC1A8;}
-        .container .demo div:nth-child(even){color:#FFFFFF; background:#BBAA86;}
+        .container .demo div{color:#FFFFFF; background:#CDC1A8;}
         @media screen and (max-width:900px){.container .demo div{margin-bottom:0;}}
         /* DEMO ONLY */
     </style>
@@ -32,6 +31,10 @@
                     <li><a href="/menu">Menu</a></li>
                     <li><a href="/makeOrder">Make order</a></li>
                     <li><a href="/showOrders">Orders</a></li>
+                    {{#isAdmin}}
+                        <li><a href="/editMenu">Edit menu</a></li>
+                        <li><a href="/editStaff">Edit staff</a></li>
+                    {{/isAdmin}}
                     <li><a href="/logout">Sign Out</a></li>
                 </ul>
             </nav>
