--- a/src/main/resources/templates/editStaff.mustache
+++ b/src/main/resources/templates/editStaff.mustache
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
-    <title>Proglot Monet | Menu</title>
+    <title>Proglot Monet | Edit staff</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="/styles/layout.css" rel="stylesheet" type="text/css" media="all">
     <style type="text/css">
         /* DEMO ONLY */
-        .dish{margin: 10px}
-        .container .demo{text-align:center;}
+        .dish{margin: 10px; }
+        .container .demo{text-align:left;}
         .container .demo div{padding:15px 0;}
-        .container .demo div:nth-child(odd){color:#FFFFFF; background:#CDC1A8;}
-        .container .demo div:nth-child(even){color:#FFFFFF; background:#BBAA86;}
+        .container .demo div{color:#FFFFFF; background:#CDC1A8;}
         @media screen and (max-width:900px){.container .demo div{margin-bottom:0;}}
         /* DEMO ONLY */
     </style>
@@ -30,18 +29,11 @@
                 <ul class="clear">
                     <li class="active"><a href="/">Home</a></li>
                     <li><a href="/menu">Menu</a></li>
-                    {{^isUserAutorize}}
-                        <li><a href="/login">Sign in</a></li>
-                    {{/isUserAutorize}}
-                    {{#isUserAutorize}}
-                        <li><a href="/makeOrder">Make order</a></li>
-                        <li><a href="/showOrders">Orders</a></li>
-                        {{#isAdmin}}
-                            <li><a href="/admin/editMenu">Edit menu</a></li>
-                            <li><a href="/admin/editStaff">Edit staff</a></li>
-                        {{/isAdmin}}
-                        <li><a href="/logout">Sign Out</a></li>
-                    {{/isUserAutorize}}
+                    <li><a href="/makeOrder">Make order</a></li>
+                    <li><a href="/showOrders">Orders</a></li>
+                    <li><a href="/admin/editMenu">Edit menu</a></li>
+                    <li><a href="/admin/editStaff">Edit staff</a></li>
+                    <li><a href="/logout">Sign Out</a></li>
                 </ul>
             </nav>
             <!-- ################################################################################################ -->
@@ -53,16 +45,24 @@
 <div class="wrapper row3">
     <main class="hoc container clear">
         <div class="content">
-            <h2>Menu</h2>
+            <a href="/admin/addStaffToList">Add a new person to staff</a>
+            <h2>Edit staff</h2>
             <div class="group btmspace-50 demo">
-                {{#dishes}}
-                    <div class="dish">
-                        <h2>{{dishName}}</h2>
-                        <p>Category: {{category}}</p>
-                        <p>{{price}} rub</p>
-                        <img src="/images/demo/gallery/dish.jpg">
+                {{#staff}}
+                    <div class="dish" style="padding-left: 20px">
+                        <form name="staffForm" action="/admin/editStaffInList" method="post">
+                            <input type="hidden" name="id" value = "{{id}}">
+                            <label>Last name: <input type="text" name="F" value = "{{F}}" style="color:black;"></label>
+                            <label>First name: <input type="text" name="I" value = "{{I}}" style="color:black"></label>
+                            <label>Father name: <input type="text" name="O" value = "{{O}}" style="color:black"></label>
+                            <label>Position: <input type="text" name="position" value = "{{position}}" style="color:black"></label>
+                            <label>Passport: <input type="number" name="passport" value = "{{passport}}" style="color:black"></label>
+                            <label>Salary Per Hour: <input type="number" name="salaryPerHour" value = "{{salaryPerHour}}" style="color:black"></label>
+                            <label>Work now: <input type="checkbox" name="statusStaff" {{checked}} ></label>
+                            <div><input class="btn" type="submit" value="Change this person"/></div>
+                        </form>
                     </div>
-                {{/dishes}}
+                {{/staff}}
             </div>
         </div>
         <div class="clear"></div>
