--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -28,8 +28,8 @@
                         <li><a href="/makeOrder">Make order</a></li>
                         <li><a href="/showOrders">Orders</a></li>
                         {{#isAdmin}}
-                            <li><a href="/editMenu">Edit menu</a></li>
-                            <li><a href="/editStaff">Edit staff</a></li>
+                            <li><a href="/admin/editMenu">Edit menu</a></li>
+                            <li><a href="/admin/editStaff">Edit staff</a></li>
                         {{/isAdmin}}
                         <li><a href="/logout">Sign Out</a></li>
                     {{/isUserAutorize}}
